--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Memory Match</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Memory Match</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+</head>
+
+<body>
+  <div class="contenedor">
+    <header>
+      <h1>MEMORY MATCH</h1>
+      <div class="subtitle">
+        <div>
+          <h2>edición:</h2>
+        </div>
+        <div class="logo">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Cartoon_Network_logo_%281992-2010%29.svg/1200px-Cartoon_Network_logo_%281992-2010%29.svg.png">
+        </div>
+      </div>
+    </header>
+    <div class="alert-tutorial">
+      <h4>¿CÓMO JUGAR?</h4>
+    </div>
+    <div id="root">
+      <div class="one">uno</div>
+      <div class="two">dos</div>
+      <div class="three">tres</div>
+      <div class="four">four</div>
+      <div class="five">five</div>
+      <div class="six">six</div>
+      <div class="seven">seven</div>
+      <div class="eight">eight</div>
+      <div class="nine">nine</div>
+      <div class="ten">ten</div>
+      <div class="eleven">eleven</div>
+      <div class="twelve">twelve</div>
+    </div>
+
+  </div> 
+<script src="main.js" type="module"></script>
+</body>
+
 </html>
