implementamos función random, creamos archivo random, por el momento no se ven las imágenes

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <h4>¿CÓMO JUGAR?</h4>
     </div>
     <div id="root">
-      <div class="one">uno</div>
+      <!--<div class="one">uno</div>
       <div class="two">dos</div>
       <div class="three">tres</div>
       <div class="four">four</div>
@@ -38,7 +38,7 @@
       <div class="nine">nine</div>
       <div class="ten">ten</div>
       <div class="eleven">eleven</div>
-      <div class="twelve">twelve</div>
+      <div class="twelve">twelve</div>-->
     </div>
 
   </div> 
