--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/cartoon_network.png">
+
 </head>
 
 <body>
