agregamos ambos lados de la carta, empezamos a implementar set timeout

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/cartoon_network.png">
 </head>
 
 <body>
@@ -27,18 +28,7 @@
       <h4>¿CÓMO JUGAR?</h4>
     </div>
     <div id="root">
-      <!--<div class="one">uno</div>
-      <div class="two">dos</div>
-      <div class="three">tres</div>
-      <div class="four">four</div>
-      <div class="five">five</div>
-      <div class="six">six</div>
-      <div class="seven">seven</div>
-      <div class="eight">eight</div>
-      <div class="nine">nine</div>
-      <div class="ten">ten</div>
-      <div class="eleven">eleven</div>
-      <div class="twelve">twelve</div>-->
+
     </div>
 
   </div> 
