Se agrega ReadMe, se limpia codigo,se hace responsive y  se da estilo a las cartas

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,18 @@
 <body>
   <div class="contenedor">
     <header>
+      <div class="contenedorHeader">
       <h1>MEMORY MATCH</h1>
       <div class="subtitle">
         <div>
           <h2>edición:</h2>
         </div>
         <div class="logo">
-          <img
+          <img class=" cnLogo"
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Cartoon_Network_logo_%281992-2010%29.svg/1200px-Cartoon_Network_logo_%281992-2010%29.svg.png">
         </div>
       </div>
+    </div>
     </header>
     <div class="alert-tutorial">
       <h4>¿CÓMO JUGAR?</h4>
