Utilizamos media query para hacer responsive el proyecto en celulares

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,13 @@
       </div>
     </div>
     </header>
-    <div class="alert-tutorial">
-      <h4>¿CÓMO JUGAR?</h4>
+    <div class="menuBar">
+     <div class="playAgain">
+       <h4> VOLVER A JUGAR <h4>
+     </div>
+      <div class="tutorial">
+        <h4>¿CÓMO JUGAR?</h4>
+      </div>
     </div>
     <div id="root">
 
