--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
     </div>
     </header>
     <div class="menuBar">
-     <div class="playAgain">
-       <h4> VOLVER A JUGAR <h4>
-     </div>
+      <div class="playAgain">
+        <h4>VOLVER A JUGAR</h4>
+      </div>
       <div class="tutorial">
         <h4>¿CÓMO JUGAR?</h4>
       </div>
