Se modifican estilos en CSS tras dejarlo responsive para los distintos dispositivos, además limpiamos y comentamos el código, agregamos funcionalidad a botones de como jugar y volver a jugar, incorporamos mensaje de felicitaciones al terminar la partida

--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,15 @@
     </div>
     </header>
     <div class="menuBar">
-      <div class="playAgain">
+      <div class="playAgain" id = "playAgain">
         <h4>VOLVER A JUGAR</h4>
       </div>
-      <div class="tutorial">
-        <h4>¿CÓMO JUGAR?</h4>
-      </div>
+      <div class="tutorial" id ="tutorial">
+        ¿CÓMO JUGAR? 
+      <div class="textBox">Encuentra los pares! <br> Debes hacer clic en cada carta para voltearla</div>
+      </div>      
     </div>
     <div id="root">
-
     </div>
 
   </div> 
